k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: llm-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: llm-app
  template:
    metadata:
      labels:
        app: llm-app
    spec:
      imagePullSecrets:
        - name: ecr-creds
      containers:
        - name: llm-app
          image: 499845095635.dkr.ecr.us-east-1.amazonaws.com/llm-app:56
          ports:
            - containerPort: 8080
