k8s/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: llm-service
spec:
  type: LoadBalancer
  selector:
    app: llm-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
