k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: llm-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: app.projetdevops.dns-cloud.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: llm-service    
            port:
              number: 80
